mutation for bulk-creating buckets